@@ -27,6 +27,7 @@ import javafx.util.Duration;
 
 import org.jabref.gui.autocompleter.AutoCompletePreferences;
 import org.jabref.gui.autocompleter.PersonNameSuggestionProvider;
+import org.jabref.gui.autocompleter.SuggestionProvider;
 import org.jabref.gui.autocompleter.SuggestionProviders;
 import org.jabref.gui.autosaveandbackup.AutosaveManager;
 import org.jabref.gui.autosaveandbackup.BackupManager;
@@ -62,11 +63,11 @@ import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.database.event.BibDatabaseContextChangedEvent;
 import org.jabref.model.database.event.EntriesAddedEvent;
 import org.jabref.model.database.event.EntriesRemovedEvent;
+import org.jabref.model.entry.Author;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.BibEntryTypesManager;
 import org.jabref.model.entry.LinkedFile;
 import org.jabref.model.entry.event.EntriesEventSource;
-import org.jabref.model.entry.event.EntryChangedEvent;
 import org.jabref.model.entry.event.FieldChangedEvent;
 import org.jabref.model.entry.field.Field;
 import org.jabref.model.entry.field.FieldFactory;
@@ -85,7 +86,7 @@ import org.slf4j.LoggerFactory;
 public class LibraryTab extends Tab {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(LibraryTab.class);
-    private final JabRefFrame frame;
+    private final LibraryTabContainer tabContainer;
     private final CountingUndoManager undoManager;
     private final DialogService dialogService;
     private final PreferencesService preferencesService;
@@ -126,7 +127,7 @@ public class LibraryTab extends Tab {
     private final TaskExecutor taskExecutor;
 
     public LibraryTab(BibDatabaseContext bibDatabaseContext,
-                      JabRefFrame frame,
+                      LibraryTabContainer tabContainer,
                       DialogService dialogService,
                       PreferencesService preferencesService,
                       StateManager stateManager,
@@ -134,7 +135,7 @@ public class LibraryTab extends Tab {
                       BibEntryTypesManager entryTypesManager,
                       CountingUndoManager undoManager,
                       TaskExecutor taskExecutor) {
-        this.frame = Objects.requireNonNull(frame);
+        this.tabContainer = Objects.requireNonNull(tabContainer);
         this.bibDatabaseContext = Objects.requireNonNull(bibDatabaseContext);
         this.undoManager = undoManager;
         this.dialogService = dialogService;
@@ -156,7 +157,6 @@ public class LibraryTab extends Tab {
         setupMainPanel();
         setupAutoCompletion();
 
-        this.getDatabase().registerListener(new SearchListener());
         this.getDatabase().registerListener(new IndexUpdateListener());
         this.getDatabase().registerListener(new EntriesRemovedListener());
 
@@ -222,12 +222,12 @@ public class LibraryTab extends Tab {
     public void onDatabaseLoadingStarted() {
         Node loadingLayout = createLoadingAnimationLayout();
         getMainTable().placeholderProperty().setValue(loadingLayout);
-        frame.addTab(this, true);
+        tabContainer.addTab(this, true);
     }
 
     public void onDatabaseLoadingSucceed(ParserResult result) {
         BibDatabaseContext context = result.getDatabaseContext();
-        OpenDatabaseAction.performPostOpenActions(this, result);
+        OpenDatabaseAction.performPostOpenActions(result, dialogService);
 
         feedData(context);
 
@@ -277,7 +277,6 @@ public class LibraryTab extends Tab {
         setupMainPanel();
         setupAutoCompletion();
 
-        this.getDatabase().registerListener(new SearchListener());
         this.getDatabase().registerListener(new EntriesRemovedListener());
 
         // ensure that at each addition of a new entry, the entry is added to the groups interface
@@ -414,10 +413,6 @@ public class LibraryTab extends Tab {
         this.mode = mode;
     }
 
-    public JabRefFrame frame() {
-        return frame;
-    }
-
     /**
      * Removes the selected entries from the database
      *
@@ -472,12 +467,6 @@ public class LibraryTab extends Tab {
         }
     }
 
-    /**
-     * This method is called from JabRefFrame when the user wants to create a new entry or entries. It is necessary when the user would expect the added entry or one of the added entries to be selected in the entry editor
-     *
-     * @param entries The new entries.
-     */
-
     public void insertEntries(final List<BibEntry> entries) {
         if (!entries.isEmpty()) {
             bibDatabaseContext.getDatabase().insertEntries(entries);
@@ -491,9 +480,9 @@ public class LibraryTab extends Tab {
 
             this.changedProperty.setValue(true); // The database just changed.
             if (preferencesService.getEntryEditorPreferences().shouldOpenOnNewEntry()) {
-                showAndEdit(entries.get(0));
+                showAndEdit(entries.getFirst());
             }
-            clearAndSelect(entries.get(0));
+            clearAndSelect(entries.getFirst());
         }
     }
 
@@ -509,6 +498,7 @@ public class LibraryTab extends Tab {
     private void createMainTable() {
         mainTable = new MainTable(tableModel,
                 this,
+                tabContainer,
                 bibDatabaseContext,
                 preferencesService,
                 dialogService,
@@ -561,21 +551,21 @@ public class LibraryTab extends Tab {
     }
 
     /**
-     * Set up auto completion for this database
+     * Set up autocompletion for this database
      */
     private void setupAutoCompletion() {
         AutoCompletePreferences autoCompletePreferences = preferencesService.getAutoCompletePreferences();
         if (autoCompletePreferences.shouldAutoComplete()) {
             suggestionProviders = new SuggestionProviders(getDatabase(), Globals.journalAbbreviationRepository, autoCompletePreferences);
         } else {
-            // Create empty suggestion providers if auto completion is deactivated
+            // Create empty suggestion providers if auto-completion is deactivated
             suggestionProviders = new SuggestionProviders();
         }
         searchAutoCompleter = new PersonNameSuggestionProvider(FieldFactory.getPersonNameFields(), getDatabase());
     }
 
-    public void updateSearchManager() {
-        frame.getGlobalSearchBar().setAutoCompleter(searchAutoCompleter);
+    public SuggestionProvider<Author> getAutoCompleter() {
+        return searchAutoCompleter;
     }
 
     public EntryEditor getEntryEditor() {
@@ -840,7 +830,7 @@ public class LibraryTab extends Tab {
                                               DialogService dialogService,
                                               PreferencesService preferencesService,
                                               StateManager stateManager,
-                                              JabRefFrame frame,
+                                              LibraryTabContainer tabContainer,
                                               FileUpdateMonitor fileUpdateMonitor,
                                               BibEntryTypesManager entryTypesManager,
                                               CountingUndoManager undoManager,
@@ -850,7 +840,7 @@ public class LibraryTab extends Tab {
 
         LibraryTab newTab = new LibraryTab(
                 context,
-                frame,
+                tabContainer,
                 dialogService,
                 preferencesService,
                 stateManager,
@@ -869,7 +859,7 @@ public class LibraryTab extends Tab {
     }
 
     public static LibraryTab createLibraryTab(BibDatabaseContext databaseContext,
-                                              JabRefFrame frame,
+                                              LibraryTabContainer tabContainer,
                                               DialogService dialogService,
                                               PreferencesService preferencesService,
                                               StateManager stateManager,
@@ -879,9 +869,9 @@ public class LibraryTab extends Tab {
                                               TaskExecutor taskExecutor) {
         Objects.requireNonNull(databaseContext);
 
-        LibraryTab libraryTab = new LibraryTab(
+        return new LibraryTab(
                 databaseContext,
-                frame,
+                tabContainer,
                 dialogService,
                 preferencesService,
                 stateManager,
@@ -889,8 +879,6 @@ public class LibraryTab extends Tab {
                 entryTypesManager,
                 (CountingUndoManager) undoManager,
                 taskExecutor);
-
-        return libraryTab;
     }
 
     private class GroupTreeListener {
@@ -915,28 +903,6 @@ public class LibraryTab extends Tab {
         @Subscribe
         public void listen(EntriesRemovedEvent entriesRemovedEvent) {
             ensureNotShowingBottomPanel(entriesRemovedEvent.getBibEntries());
-        }
-    }
-
-    /**
-     * Ensures that the results of the current search are updated when a new entry is inserted into the database Actual methods for performing search must run in javafx thread
-     */
-    private class SearchListener {
-
-        @Subscribe
-        public void listen(EntriesAddedEvent addedEntryEvent) {
-            DefaultTaskExecutor.runInJavaFXThread(() -> frame.getGlobalSearchBar().performSearch());
-        }
-
-        @Subscribe
-        public void listen(EntryChangedEvent entryChangedEvent) {
-            DefaultTaskExecutor.runInJavaFXThread(() -> frame.getGlobalSearchBar().performSearch());
-        }
-
-        @Subscribe
-        public void listen(EntriesRemovedEvent removedEntriesEvent) {
-            // IMO only used to update the status (found X entries)
-            DefaultTaskExecutor.runInJavaFXThread(() -> frame.getGlobalSearchBar().performSearch());
         }
     }
 
